--- a/thank_you.css
+++ b/thank_you.css
@@ -1,88 +1,137 @@
 @import 'https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400';
-* {
-	margin: 0;
-	padding: 0;
-	border: 0;
-	font-size: 100%;
-	font: inherit;
-	vertical-align: baseline;
-    font-family: 'Source sans pro', sans-serif;
-z-index: 1;}
 
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
-	display: block;}
+* {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  font-family: 'Source sans pro', sans-serif;
+  z-index: 1;
+}
+
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
+  display: block;
+}
 
 body {
-	line-height: 1;
+  line-height: 1;
 }
 
-ol, ul {
-	list-style: none;
+ol,
+ul {
+  list-style: none;
 }
+
 canvas {
-	width: 100%;
-	height: 100%;
-	display: block;
-	position: fixed;
-	top: 0;
-	left: 0;
-	z-index: -9999;
-  }
-
-  h1 {
-      margin-top: 5rem;
-      font-family: 'source sans pro', sans-serif;
-    font-weight: 300;
-    line-height: 1.5;
-    letter-spacing: -0.025em;
-    font-size: 2.5em;
-    line-height: 1.2;
-    letter-spacing: 0.5rem;
-    text-transform: uppercase;
-    color: #fff;
-    text-align: center;
+  width: 100%;
+  height: 100%;
+  display: block;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -9999;
 }
+
+h1 {
+  margin-top: 5rem;
+  font-family: 'source sans pro', sans-serif;
+  font-weight: 300;
+  line-height: 1.5;
+  letter-spacing: -0.025em;
+  font-size: 2.5em;
+  line-height: 1.2;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+}
+
 p {
-    margin: 3rem 2rem;
-    font-weight: 300;
-    line-height: 1.5;
-    letter-spacing: -0.025em;
-    font-size: 1.5em;
-    line-height: 1.2;
-    letter-spacing: 0.5rem;
-    text-transform: uppercase;
-    color: rgb(207, 207, 207);
-    text-align: center;
+  margin: 3rem 2rem;
+  font-weight: 400;
+  line-height: 1.5;
+  letter-spacing: -0.025em;
+  font-size: 1.5em;
+  line-height: 1.2;
+  letter-spacing: 0.5rem;
+  text-transform: uppercase;
+  color: rgb(207, 207, 207);
+  text-align: center;
 }
 
-  
 
-  .black-hole-container{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    z-index: -1;
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+
+.black-hole-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  z-index: -1;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.bh,
+.bh:before,
+.bh:after {
+  display: block;
+  border-radius: 50%;
+}
+
+.bh {
+  width: 15rem;
+  height: 15rem;
+  box-shadow: 1vmin 0 3vmin 2vmin #357fbb,
+    inset -1vmin 0 3vmin 4vmin #000000,
+    -4vmin 0 35vmin 0 #bdbdbd25;
+  animation: bh 10s linear infinite;
+}
+
+@keyframes bh {
+  0% {
+    transform: rotate(-360deg)
   }
 
-  .bh, .bh:before, .bh:after {
-    display: block;
-    border-radius: 50%;
+  100% {
+    transform: rotate(0deg)
   }
-  .bh {
-    width: 15rem;
-    height: 15rem;
-    box-shadow: 1vmin 0 3vmin 2vmin #357fbb, 
-         inset -1vmin 0 3vmin 4vmin #000000,
-               -4vmin 0 35vmin 0 #bdbdbd25;
-    animation: bh 10s linear infinite;
-  }
-  @keyframes bh {
-    0% {transform: rotate(-360deg)}
-    100% {transform: rotate(0deg)}
-  }
+}
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+button {
+  cursor: pointer;
+  padding: 1rem;
+  border-radius: 10px;
+  border: 1px solid #c4c4c4;
+  background: none;
+  font-family: 'source sans pro', sans-serif;
+  font-weight: 600;
+  font-size: 1rem;
+  color: #7ef1c5;
+  transition: 0.2s all ease;
+  margin: 1rem 0.5rem;
+}
+
+button:hover {
+  color: rgb(255, 255, 255);
+  border: 1px solid #7ef1c5;
+}
