--- a/index.scss
+++ b/index.scss
@@ -491,15 +491,15 @@ footer.major {
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-right: 1px solid rgba(255, 255, 255, 0.2);
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
-    border-radius: 10px;
+    border-radius: 6px;
     box-shadow: 0 25px 45px rgba(0, 0, 0, 0.1);
     max-width: 40%;
-    max-height: 60rem;
+    // max-height: 60rem;
 }
 
 .card-img-top {
-    border-radius: 10px;
-    border: 3px solid black;
+    border-radius: 2px;
+    // border: 3px solid black;
 }
 
 .card-body {
@@ -508,6 +508,8 @@ footer.major {
 
 p.card-text {
     font-size: 1rem;
+    margin: 1rem 0;
+    font-weight: 400;
 }
 
 #tech {
@@ -769,7 +771,7 @@ body.is-preload {
 
     h5,
     h6 {
-        letter-spacing: 0.2rem;
+        letter-spacing: 0.1rem;
         font-size: 1.8rem;
         font-weight: 600;
     }
@@ -852,7 +854,7 @@ body.is-preload {
 #second,
 #cta {
     backdrop-filter: blur(10px);
-    background-color: rgba(165, 165, 165, 0.25);
+    background-color: rgba(207, 207, 207, 0.25);
     /* box-shadow: 5px 5px 30px rgba(0, 0, 0, .25); */
 
 }
@@ -866,7 +868,7 @@ body.is-preload {
     #first,
     #second,
     #cta {
-        background-color: rgba(167, 167, 167, 0.25);
+        background-color: rgba(207, 207, 207, 0.25);
         -webkit-backdrop-filter: blur(2em);
         backdrop-filter: blur(1.25em);
     }
@@ -938,7 +940,7 @@ a.fa-github {
     padding: 0 !important;
     text-decoration: none !important;
     backdrop-filter: blur(40px);
-    background: rgba(44, 44, 44, 0.9) !important;
+    background: rgba(71, 71, 71, 0.9) !important;
 
 
 }
@@ -981,7 +983,7 @@ a.fa-github {
                 color: $aquamarine_theme;
                 border-radius: 10px;
                 transition: 0.2s all ease;
-                text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #7ef1c5, 0 0 82px #7ef1c5, 0 0 92px #7ef1c5, 0 0 102px #7ef1c5, 0 0 151px #7ef1c5;
+                // text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #7ef1c5, 0 0 82px #7ef1c5, 0 0 92px #7ef1c5, 0 0 102px #7ef1c5, 0 0 151px #7ef1c5;
             }
         }
     }
@@ -999,7 +1001,7 @@ a.fa-github {
     &:hover {
         color: $aquamarine_theme;
         border-radius: 10px;
-        text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #7ef1c5, 0 0 82px #7ef1c5, 0 0 92px #7ef1c5, 0 0 102px #7ef1c5, 0 0 151px #7ef1c5;
+        // text-shadow: 0 0 7px #fff, 0 0 10px #fff, 0 0 21px #fff, 0 0 42px #47acff, 0 0 82px #47acff, 0 0 92px #47acff, 0 0 102px #47acff, 0 0 151px #47acff;
     }
 }
 
@@ -1471,11 +1473,11 @@ dl.alt {
         #card2,
         #card3,
         #card4 {
-            display: flex !important;
+            // display: flex !important;
             min-width: 105%;
-            border: none;
-            background: none;
-            box-shadow: none;
+            // border: none;
+            // background: none;
+            // box-shadow: none;
         }
 
 
@@ -1493,4 +1495,88 @@ dl.alt {
         min-width: 100%;
     }
 
+}
+
+.project-row {
+    display: flex;
+    flex-direction: row;
+    min-width: 100%;
+
+    .card-body {
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-around;
+    }
+
+    .image-wrapper {
+        margin: auto;
+        padding: 1rem;
+
+    }
+}
+
+@media screen and (max-width: 915px) {
+    .project-row {
+        flex-direction: column-reverse;
+
+        .image-wrapper {
+            margin: auto;
+            padding: 1rem;
+
+            img {
+                max-width: 80%;
+            }
+        }
+    }
+
+    .project-row:nth-child(2) {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 680px) {
+    .project-row {
+        flex-direction: column-reverse;
+        width: 100%;
+
+        .image-wrapper {
+            margin: auto;
+            padding: 1rem;
+
+            img {
+                max-width: 100%;
+            }
+        }
+    }
+
+    .project-row:nth-child(2) {
+        flex-direction: column;
+    }
+}
+
+@media screen and (max-width: 500px) {
+    .card-title{
+        font-size: 1.25rem !important;
+    }
+    .card-text{
+        font-size: 0.9rem !important;
+    }
+    #first {
+    
+            #card1,
+            #card2,
+            #card3,
+            #card4 {
+                display: flex !important;
+                min-width: 105%;
+                // border: none;
+                // background: none;
+                // box-shadow: none;
+            }
+    
+    
+        }
+
+    
 }
